# focus-wizard

./: .gitignore  README.md  docker-compose.yml  package-lock.json
PresageElectron/: index.html  package-lock.json  vite.config.ts
PresageElectron/electron/: bridge-manager.ts  main.ts  preload.ts
PresageElectron/src/: App.css  App.tsx
PresageElectron/src/hooks/: useWebcam.ts
app/: index.html  package.json  vite.config.ts
app/electron/: main.ts
app/src/: App.tsx
bridge/: CMakeLists.txt  Dockerfile  README.md
bridge/src/: focus_analyzer.cpp  focus_analyzer.hpp  json_emitter.cpp  json_emitter.hpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp
deno-backend/: .env_gem  @oak-oak.d.ts  attentiveness.ts  deno.d.ts  deno.json  main.ts  main_test.ts  package-lock.json  package.json  tsconfig.json  vault-keypair.json  wallet-state.json  wallet.html  walletRouter.ts  zod.d.ts
electron/: main.ts
shared/: productivitySchemas.ts
src/: App.css  App.tsx  index.css
wizard-electron/: .gitignore  package-lock.json  package.json  settings.html  setup.html  spell-overlay.html  tsconfig.json  vite.config.ts
wizard-electron/electron/: bridge-manager.ts  electron-env.d.ts  frame-writer.ts  main.ts  preload.ts
wizard-electron/src/: App.css  App.tsx  index.css  settings.tsx  setup.tsx  vite-env.d.ts
wizard-electron/src/components/: Settings.css  Settings.tsx  SettingsPage.tsx  SetupPage.tsx
wizard-electron/src/hooks/: useWebcam.ts
wizard-electron/src/sprites/: SpriteManager.ts  index.ts
